# virtual_client

./: .gitignore  Makefile.am  config.ini
gate/: gate_connector.cpp  gate_connector.hpp  gate_msg_handler.cpp  gate_msg_handler.hpp
http/: http_listener.cpp  http_listener.hpp  http_msg_handler.cpp  http_msg_handler.hpp
login/: login_connector.cpp  login_connector.hpp  login_msg_handler.cpp  login_msg_handler.hpp
main/: common_struct.hpp  main.cpp  virtual_client.cpp  virtual_client.hpp  virtual_client_fwd.hpp
